[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://UpgradePopup.tscn" type="PackedScene" id=2]

[node name="HUD" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MoneyLabel" type="Label" parent="CanvasLayer"]
margin_right = 142.0
margin_bottom = 64.0

[node name="ClickerButton" type="Button" parent="CanvasLayer"]
margin_left = 2.74982
margin_top = 668.5
margin_right = 271.75
margin_bottom = 789.5

[node name="PassiveIncomeLabel" type="Label" parent="CanvasLayer"]
margin_left = 432.0
margin_top = 4.5
margin_right = 603.0
margin_bottom = 58.5

[node name="MutliplierLabel" type="Label" parent="CanvasLayer"]
margin_left = 378.0
margin_top = 6.10352e-005
margin_right = 600.0
margin_bottom = 64.0001

[node name="ChickenButton" type="Button" parent="CanvasLayer"]
margin_left = 288.0
margin_top = 664.0
margin_right = 602.0
margin_bottom = 795.0
text = "Hatch a chicken!"

[node name="ChickenLabel" type="Label" parent="CanvasLayer"]
margin_left = 353.25
margin_top = 92.2501
margin_right = 560.25
margin_bottom = 203.25

[node name="UpgradePopup" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="CanvasLayer/ClickerButton" to="." method="_on_ClickerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ChickenButton" to="." method="_on_ChickenButton_pressed"]
